added zsh + zgenom

--- a/dev/zsh/main.yaml
+++ b/dev/zsh/main.yaml
@@ -1,8 +1,17 @@
 actions:
-  - action: package.install
-    list:
-      - fzf
-      - zsh
+
+  - action: command.run
+    command: curl
+    args:
+      - "-fsSL"
+      - "https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh"
+      - "-o"
+      - "ohm-myzsh-install.sh"
+
+  - action: command.run
+    command: sh
+    args:
+      - "ohm-myzsh-install.sh"
 
   - action: git.clone
     repository: https://github.com/jandamm/zgenom.git
@@ -11,3 +20,8 @@ actions:
   - action: file.link
     from: zshrc
     to: "{{ user.home_dir }}/.zshrc"
+
+  - action: package.install
+    list:
+      - fzf
+      - zsh
