added git-crypt and direnv

--- a/dev/core.yaml
+++ b/dev/core.yaml
@@ -2,6 +2,6 @@ depends:
   - ./zsh
 
 actions:
-  action: package.install
-  list:
-    - git-crypt
+  - action: package.install
+    list:
+      - git-crypt
